# Velib

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  forecast_weather_data  pyproject.toml  requirements.txt
api/: main.py
data/: ingestion.py  loader.py  metadata.py  preprocessing.py
docker/postgres/init/: 01-create-mlflow-db.sql  01_create_sites_and_forecast.sql  02_api_schema.sql
images/: compteur_paris.html
inference/: main.py
models/: evaluation.py  features.py  model_utils.py  predict.py  train.py
pages/: analysis.py  overview.py  prediction.py
scripts/: bootstrap_velib_csv.py  preprocess_data.py  recursive_forecast.py  streamlit_app.py  train_model.py  update_data.py  update_data_old.py
src/data/: ingestion.py  loader.py  metadata.py  preprocessing.py
src/db/: db.py
src/models/: features.py  model_pointer.py  model_utils.py  predict.py  train.py
src/ui/pages/: analysis.py  overview.py  prediction.py
src/utils/: config.py  utils.py
tests/: conftest.py  inference.py  test_api.py  test_features.py  test_model.py  test_predict.py  test_preprocessing.py  test_recursive.py  test_recursive_forecast.py  test_train.py
utils/: config.py
